[lib]
crate-type = ['cdylib']

[features]
default = []
std = ['xc-runtime/std']

[workspace]
members = []
[profile.release]
lto = true
panic = 'abort'

[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
name = 'xc-runtime-wasm'
version = '1.0.0'
[dependencies.xc-runtime]
default-features = false
path = '..'
